# AmazonBinSense

./: .gitattributes  .gitignore  CLAUDE.md  ENVIRONMENT_SETUP.md  PROJECT_PLAN.md  environment.yml  pyproject.toml  requirements.txt
analysis/: ids_b64.txt  quantify_subset.py  unique_image_names.csv
data/: label_studio_tasks.json
data/splits/: label_studio_sample.csv
docs/: Copy of Week 4 & 5.ipynb  Copy of Week 7 _ Frontend.ipynb  Copy of Week2&3.ipynb  Copy of Week_6_aws-deployment-guide.docx
notebooks/: 01_download.ipynb  02_eda_and_splits.ipynb
setup/: install_colab.sh  vscode_extensions.txt
tools/download/: __init__.py  s3_downloader.py
tools/labeling/: make_label_studio_tasks.py
utils/: __init__.py  env_utils.py
