[project]
name = "binsense"
version = "0.1.0"
description = "Amazon BinSense AI — bin image verification using YOLO + metric learning + FAISS"
requires-python = ">=3.11"
authors = [{ name = "Rishi", email = "rishi.b09@gmail.com" }]

dependencies = [
    # ── Computer vision & detection ──────────────────────────────────────────
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.3.0",
    "timm>=1.0.3",

    # ── Retrieval / metric learning ──────────────────────────────────────────
    "faiss-cpu>=1.8.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    # ── Data / EDA ───────────────────────────────────────────────────────────
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",

    # ── AWS / S3 ─────────────────────────────────────────────────────────────
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "requests>=2.32.0",

    # ── MLOps ────────────────────────────────────────────────────────────────
    "mlflow>=2.13.0",
    "prometheus-client>=0.20.0",

    # ── App UI ────────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",
    "gradio>=4.36.0",

    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# PyTorch CPU wheels — used locally and in CI.
# On Colab GPU runtime, torch is pre-installed; skip this group there.
torch = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
]

# Jupyter / notebook tooling — local dev only
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "ipywidgets>=8.1.0",
    "ipython>=8.25.0",
]

# Manual labeling workflow (Label Studio)
labeling = [
    "label-studio>=1.11.0",
]

# SAM — no PyPI wheel; install from source
# uv pip install -e ".[sam]"  OR  pip install git+https://...
sam = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]

# ── PyTorch CPU index ─────────────────────────────────────────────────────────
# Tells uv to pull torch/torchvision/torchaudio from the CPU-only wheel index
# instead of PyPI (which ships CUDA builds that are 2 GB+).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


# ── Build system ──────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "utils"]

[tool.hatch.metadata]
allow-direct-references = true
